fix: disable dependabot and codescan

--- a/dashlord.yml
+++ b/dashlord.yml
@@ -10,8 +10,8 @@ tools:
   nuclei: true
   zap: true
   thirdparties: true
-  dependabot: true
-  codescan: true
+  dependabot: false
+  codescan: false
   updownio: true
   http: true
   nmap: true
