feat: add disinfo + opentermsarchive

--- a/dashlord.yml
+++ b/dashlord.yml
@@ -204,3 +204,5 @@ urls:
     category: startup
     repositories:
       - betagouv/eva-serveur
+  - url: https://disinfo.quaidorsay.fr
+  - url: https://opentermsarchive.org
