feat: ajout open-collectivites.fr

--- a/dashlord.yml
+++ b/dashlord.yml
@@ -206,3 +206,4 @@ urls:
       - betagouv/eva-serveur
   - url: https://disinfo.quaidorsay.fr
   - url: https://opentermsarchive.org
+  - url: https://open-collectivites.fr
